tests/ui/parser/raw/raw-literal-self.rs
fn main() {
    let r#self: ();
    //~^ ERROR `self` cannot be a raw identifier
}

// ferrocene-annotations: fls_usr6iuwpwqqh
// Raw String Literals
